Cambios para el funcionamiento inicial del despliegue con Docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,25 +1,20 @@
-# Use an official Python runtime as a parent image
+# Usa una imagen oficial de Python optimizada
 FROM python:3.9-slim
 
-# Set the working directory to /app
+# Establece el directorio de trabajo dentro del contenedor
 WORKDIR /app
 
-# Copy the requirements file from the project root into the container
+# Copia el archivo de dependencias
 COPY requirements.txt .
-# Install any needed packages specified in requirements.txt
+
+# Instala dependencias
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Copy the application code into the container
-COPY app/ app/
-# Copy the main entry point file
-COPY app.py .
+# Copia todo el contenido del proyecto al contenedor
+COPY . .
 
-# Expose port 5000 for the Flask app
+# Expone el puerto en el que corre Flask
 EXPOSE 5000
 
-# Set environment variables for Flask
-ENV FLASK_APP=app.py
-ENV FLASK_RUN_HOST=0.0.0.0
-
-# Run the application
-CMD ["flask", "run"]
+# Comando para correr la app directamente
+CMD ["python", "app.py"]
