Modificación del docker-compose para que se reincie en caso de caida

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@
 
 services:
   web:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -14,6 +15,7 @@ services:
       - SECRET_KEY=super-secret-key
 
   db:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile.db
