--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:password@db:5432/SIIAPEC
       - SECRET_KEY=super-secret-key
+    volumes:
+      - ../instance:/app/instance
   db:
     ## reinicia el contenedor si se detiene
     restart: always
