Creación de las migraciones para cmpose de completar perfil, enter otros, ademá de pestaña de coordinación y agregación de entrevistas a la parte de configuración

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - SECRET_KEY=super-secret-key
     volumes:
       - ../instance:/app/instance
+      - ../:/app
   db:
     ## reinicia el contenedor si se detiene
     restart: always
