Cambios en los modelos para agregar created_at y updated_at además de modificar toda la lógica de las zonas horarias para tener la hora local

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,12 @@
 FROM python:3.11-slim
 WORKDIR /app
 
+# Configura la zona horaria de Ciudad Juárez
+ENV TZ=America/Ciudad_Juarez
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 # Instala netcat para el script de espera de la BD
-RUN apt-get update && apt-get install -y netcat-traditional && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y netcat-traditional tzdata && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
