--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -12,10 +12,8 @@ services:
       - "5000"
     depends_on:
       - db
-    environment:
-      - DATABASE_URL=postgresql://postgres:password@db:5432/SIIAP
-      - SECRET_KEY=super-secret-key
-      - TZ=America/Ciudad_Juarez
+    env_file:
+      - .env
     volumes:
       - ../instance:/app/instance
       - ../:/app
